# lexisport-cricket-rule-agent

./: .gitignore  CLAUDE.md  README.md  render.yaml
backend/: README.md  agent.py  agent_prompts.py  answer.py  api.py  ask.py  chat.py  citations.py  prompts.py  requirements.txt  retrieval.py  web_search.py
backend/tests/: test_citation_check.py  test_judge_wiring.py
docs/: deliverables.md  findings-log.md  submission.md
evals/: README.md  compare_runs.py  compile_report.py  golden_set.json  http_sanity_check.py  pyproject.toml  run_baseline.py  score.py
evals/results/: _scoring_start.txt  baseline_2026-07-13.json  baseline_report.md  citecheck_report.md  comparison_2026-07-14.md  comparison_citecheck_2026-07-14.md  comparison_citecheck_2026-07-15.md  comparison_evidencefix_2026-07-16.md  comparison_judgefix_2026-07-16.md  evidencefix_report.md  http_sanity_2026-07-13.json  hybrid_report.md  judgefix_report.md
frontend/: README.md  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/proxy/: route.ts
frontend/components/: ChatMessage.tsx  CitationChip.tsx  GradeScopePicker.tsx  ReviewBanner.tsx  ThinkingIndicator.tsx
frontend/lib/: config.ts  types.ts  utils.ts
gateway/: README.md  config.yaml  requirements.txt
ingestion/: README.md  chunk.py  embed.py  parse.py  requirements.txt  run.py  store.py
supabase/migrations/: 20260710093141_enable_pgvector.sql  20260710093142_create_rule_chunks.sql  20260710093143_create_langgraph_checkpointer_tables.sql  20260711031607_create_ingest_document_version_function.sql  README.md  (+6 more)
