[project]
name = "evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "langchain-core==1.4.9",
    "langchain-google-vertexai>=3.2.4",
    "langchain-openai==1.3.5",
    "langgraph==1.2.9",
    "langgraph-checkpoint-postgres==3.1.0",
    "langsmith>=0.10.2",
    "openai>=2.45.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "supabase==2.31.0",
    "tavily-python==0.7.26",
]
